--- a/app/globals.css
+++ b/app/globals.css
@@ -25,10 +25,16 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
+/* body {
     color: var(--foreground);
     background: var(--background);
     font-family: Arial, Helvetica, sans-serif;
+} */
+
+body {
+    color: var(--foreground);
+    background: var(--background);
+    font-family: "Natyl", Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
@@ -41,6 +47,12 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+}
+
+*::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, and Opera */
 }
 
 .text-gradient {
